# FYS4411

./: .gitignore  README.md
Project1/: CMakeLists.txt  README.md  main.cpp  sampler.cpp  sampler.h  system.cpp  system.h
Project1/Hamiltonians/: hamiltonian.h  harmonicoscillator.cpp  harmonicoscillator.h
Project1/InitialStates/: randomuniform.cpp
Project1/Python/: Variational_Monte_Carlo.ipynb
Project1/Python/.ipynb_checkpoints/: Variational_Monte_Carlo-checkpoint.ipynb
Project1/Python/Results/Task_a/: variational_alpha.pgf
Project1/Python/Results/Task_b/: analytical_vs_numerical.pgf  analytical_vs_numerical_STD_energy.pgf
Project1/Python/Results/Task_c/: brutevsImp_100.pgf  brutevsImp_100_1.pgf  brutevsImp_100_2.pgf  brutevsImp_10_1.pgf  brutevsImp_10_2.pgf  brutevsImp_1_1.pgf  brutevsImp_500_1.pgf
Project1/Python/Results/Task_c_STD/: brutevsImp_100.pgf  brutevsImp_100_1.pgf  brutevsImp_100_2.pgf  brutevsImp_10_1.pgf  brutevsImp_10_2.pgf
Project1/Python/Results/Task_e/: Energy_MC_alphas.pgf  blocking_alphas_100particles.pgf  blocking_alphas_10particles.pgf  blocking_alphas_50particles.pgf  blocking_alphas_particlesTOPNOTCH.pgf
Project1/Python/Results/Task_f/: gradient_descent.pgf
Project1/Python/Results/Task_g/: one_body_density.pgf
Project1/Python/statistical_tools/: blocking.py  bootstrap.py
Project1/WaveFunctions/: simplegaussian.cpp  simplegaussian.h  wavefunction.h
Project2/: README.md
Project2/.ipynb_checkpoints/: Restricted_Boltzmann_Machine-checkpoint.ipynb
Project2/Code/Python/.ipynb_checkpoints/: Restricted_Boltzmann_Machine-checkpoint.ipynb
Project2/Code/Python/Results/: I_gi_sigma.pgf  I_nh_10_all500.pgf  I_nh_20_all500.pgf  I_nh_2_all500.pgf  I_nh_5_all500.pgf  gi_sigma.pgf  nh_10_first50.pgf  nh_10_last50.pgf  nh_20_first50.pgf  nh_20_last50.pgf  nh_2_first50.pgf  nh_2_last50.pgf  test_nh_2_first50.pgf  test_nh_2_last50.pgf
Project2/parallell_code/: CMakeLists.txt  compile_project  jobscript  main.cpp  main.h  sampler.cpp  sampler.h  system.cpp  system.h
Project2/parallell_code/Block/: README.md
Project2/parallell_code/Hamiltonians/: hamiltonian.h  harmonicoscillator.cpp  harmonicoscillator.h
Project2/parallell_code/InitialStates/: randomuniform.cpp  randomuniform.h
Project2/parallell_code/NeuralNetworks/: network.h
Project2/parallell_code/WaveFunctions/: neuralquantumstate.cpp  neuralquantumstate.h  wavefunction.h
Project2/parallell_code/armadillo-9.870.2/: ArmadilloConfig.cmake  CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  libarmadillo.so.9
Project2/parallell_code/armadillo-9.870.2/InstallFiles/: ArmadilloConfig.cmake
Project2/parallell_code/share/Armadillo/CMake/: ArmadilloLibraryDepends.cmake
Project2/serial_code/: CMakeLists.txt  compile_project  main.cpp  sampler.cpp  sampler.h  system.cpp  system.h
Project2/serial_code/Hamiltonians/: hamiltonian.cpp
Project2/serial_code/InitialStates/: initialstate.h
Project2/serial_code/NeuralNetworks/: network.cpp  neuralnetwork.cpp  neuralnetwork.h
Project2/serial_code/Python/statistical_tools/: blocking.py  bootstrap.py  hist.py
